# WordWeaveAI

./: .gitignore  README.md  gloable_config.py  pyproject.toml
debug_docs/: crew_output.md
src/wordweaveai/: main.py
src/wordweaveai/crews/academic_writer_crew/: academic_writer_crew.py  dev_note.md
src/wordweaveai/crews/academic_writer_crew/config/: agents.yaml  research_proposal.md  tasks.yaml
src/wordweaveai/tools/: custom_tool.py
