[project]
name = "wordweaveai"
version = "0.1.0"
description = "WordWeaveAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "arxiv>=2.1.3",
    "crewai[tools]>=0.100.0,<1.0.0",
    "pydantic>=2.10.6",
    "pypdf>=5.2.0",
    "semanticscholar>=0.9.0",
]

[project.scripts]
kickoff = "wordweaveai.main:kickoff"
plot = "wordweaveai.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
